--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,19 +6,34 @@ name: CI
 # events but only for the master branch
 on:
  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+ checkTag:  
+    runs-on: ubuntu-latest
+    outputs:
+      lastTag: ${{ steps.lastTag.outputs.test }}
+      tagActual: ${{ steps.tagActual.outputs.test }}
+    steps:
+     - id: lastTag
+       run: curl "https://api.github.com/repos/BilelJegham/RepoRelease/releases/latest" | grep -oP '(?<="tag_name": ")[^"]*'
+     - id: tagActual
+       run: echo "beta2"
+       #cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]'
+
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: checkTag
+    if: ${{ needs.checkTag.outputs.lastTag != needs.checkTag.outputs.tagActual}} 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      
       # Runs a single command using the runners shell
       - name: Test if new release
         run: |
@@ -26,7 +41,6 @@ jobs:
           git config --local user.name "GeoGuess Updater"
           git remote add main https://github.com/BilelJegham/RepoRelease
           git fetch --tags main
-          tag=$(curl "https://api.github.com/repos/BilelJegham/RepoRelease/releases/latest" | grep -oP '(?<="tag_name": ")[^"]*')     
           git merge -X theirs --allow-unrelated-histories $tag
       - name: Commit
         run: |
