--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     needs: checkTag
-    if: ${{ needs.checkTag.outputs.lastTag != needs.checkTag.outputs.tagActual}} 
+    if: ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
