--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Update
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -43,11 +43,11 @@ jobs:
           git config --local user.name "GeoGuess Updater"
           git remote add main https://github.com/BilelJegham/RepoRelease
           git fetch --tags main
-          git merge -X theirs --allow-unrelated-histories $tag
+          git merge -X theirs --allow-unrelated-histories ${{ needs.checkTag.outputs.lastTag }}
       - name: Commit
         run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "tag: $tag" -a
+          git diff-index --quiet HEAD || git commit -m "tag: ${{ needs.checkTag.outputs.lastTag }}" -a
       - name: GitHub Push
         uses: ad-m/github-push-action@v0.5.0
         with:
