--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - id: lastTag
       run: |
-        echo "::set-output name=var::$(curl "https://api.github.com/repos/BilelJegham/RepoRelease/releases/latest" | grep -oP '(?<="tag_name": ")[^"]*' ))"   
+        echo "::set-output name=var::$(curl "https://api.github.com/repos/BilelJegham/RepoRelease/releases/latest" | grep -oP '(?<="tag_name": ")[^"]*' )"   
     - id: tagActual
       run: echo "::set-output name=var::beta3"
        #cat package.json | grep version| head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]'
