--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: checkTag
-    if: ${{ needs.checkTag.outputs.lastTag }}  != ${{ needs.checkTag.outputs.tagActual }}
+    if: ${{ needs.checkTag.outputs.lastTag != needs.checkTag.outputs.tagActual }}
     steps:
     - run: echo ${{needs.checkTag.outputs.lastTag}} ${{needs.checkTag.outputs.tagActual}}
