--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -10,6 +10,7 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJSON(github) }}
         run: echo "$GITHUB_CONTEXT"
+      - run: echo "$GITHUB_REF"
       - name: Dump job context
         env:
           JOB_CONTEXT: ${{ toJSON(job) }}
